--- a/index.html
+++ b/index.html
@@ -14,18 +14,22 @@
   <section id="dealer-side">
     <h3>Dealer</h3>
     <h2 id="dealer-message">Message</h2>
-    <button id="deal">Deal</button>
+    <p id="place-bet">Place your bet!</p>
+    
     <div>
       <div id="dealer-card-total">
         <p id="d-card-total">0</p>
-        <div id="dealer-cards"></div>
+        <div id="dealer-card-one"></div>
+        <div id="dealer-card-two"></div>
+          <div></div>
       </div>
     </div>
   </section>
 
   <section id="hit-stand-buttons">
     <button id="hit">Hit</button>
-    <p id="place-bet">Place your bet!</p>
+    
+    <button id="deal">Deal</button>
     <button id="stand">Stand</button>
   </section>
 
