--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script  defer src="./js/app.js"></script>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/cardstarter.css">
   <title>Document</title>
 </head>
 <body>
@@ -19,8 +20,8 @@
     <div>
       <div id="dealer-cards">
         <p id="d-card-total">0</p>
-        <div id="dealer-card-one"></div>
-        <div id="dealer-card-two"></div>
+        <div class="card d05 large shadow"></div>
+        <div id="hidden" class="card large back-red"></div>
           <div></div>
       </div>
     </div>
