created more variables, think about simplifying

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <section id="player-side">
     <h3>Player</h3>
       <div id="player-cards">
-        <div id="player-card-one"></div>
-        <div id="player-card-two"></div>
+        <div class="card cK large"></div>
+        <div class="card d10 large"></div>
       </div>
     <h2 id="player-message">Message</h2>
     <div>
@@ -52,7 +52,7 @@
 
   <section id="bank">
     <h4>Bank</h4>
-    <h5 id="dollar-amount">$0</h5>
+    <h5 id="dollar-amount"></h5>
       <div>
         <button id="all-in">All in</button>
       </div>
