remove chips, replace with bet input and button

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <section id="bank">
     <h4>Bank</h4>
-    <h5 id="dollar-amount"></h5>
+    <h5 id="dollar-amount">$2000</h5>
       <div>
         <button id="all-in">All in</button>
       </div>
@@ -61,13 +61,16 @@
   </section>
 
   <div id="chips">
-    <button id="one-dollar" class="chips">$1</button>
+    <div>Bet Amount: 
+      <input type="text"> <button class="bet">Bet</button>
+    </div>
+    <!-- <button id="one-dollar" class="chips">$1</button>
     <button id="five-dollars" class="chips">$5</button>
     <button id="ten-dollars" class="chips">$10</button>
     <button id="twenty-five-dollars" class="chips">$25</button>
     <button id="fifty-dollars" class="chips">$50</button>
     <button id="one-hundred dollars" class="chips">$100</button>
-    <button id="five-hundred-dollars" class="chips">$500</button>
+    <button id="five-hundred-dollars" class="chips">$500</button> -->
   </div>
 
   <button id="play-again">Play Again</button>
