move deal button beside bet input

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <section id="hit-stand-buttons">
     <button id="hit">Hit</button>
-    <button id="deal">Deal</button>
+    <!-- <button id="deal">Deal</button> -->
     
       
     <button id="stand">Stand</button>
@@ -62,7 +62,7 @@
 
   <div id="chips">
     <div>Bet Amount: 
-      <input type="text"> <button class="bet">Bet</button>
+      <input type="text"> <button id='deal'class="bet">Deal</button>
     </div>
     <!-- <button id="one-dollar" class="chips">$1</button>
     <button id="five-dollars" class="chips">$5</button>
