move all in, set player message to blackjack

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <section id="dealer-side">
     <h3>Dealer</h3>
-    <h2 id="dealer-message">Message</h2>
+    <h2 id="dealer-message"></h2>
     
     
     <div>
@@ -41,7 +41,7 @@
         <div class="card cK large"></div>
         <div class="card d10 large"></div>
       </div>
-    <h2 id="player-message">Message</h2>
+    <h2 id="player-message"></h2>
     <div>
     <div id="player-card-total">
       <p id="p-card-total">0</p>
@@ -54,15 +54,13 @@
   <section id="bank">
     <h4>Bank</h4>
     <h5 id="dollar-amount">$2000</h5>
-      <div>
-        <button id="all-in">All in</button>
-      </div>
-    </div>
   </section>
 
   <div id="chips">
     <div>Bet Amount: 
-      <input type="text"> <button id='deal'class="bet">Deal</button>
+      <input type="text"> 
+      <button id="all-in">All In</button> 
+      <button id='deal'class="bet">Deal</button>
     </div>
     <!-- <button id="one-dollar" class="chips">$1</button>
     <button id="five-dollars" class="chips">$5</button>
