add card classes to render card

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <section id="player-side">
     <div id="player-cards">
-      
+      <!-- <div class="card d05 large"></div> -->
     </div>
     <h2 id="player-message"></h2>
     
