clean code, start ace logic and stand

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   
   <div id="chips">
     <div>Bet Amount: 
-      <input type="text"> 
+      <input id='bet-amount' type="number"> 
       <button id="all-in">All In</button> 
       <button id='deal'class="bet">Deal</button>
     </div>
