--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script  defer src="./js/app.js"></script>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/cardstarter.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
