--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
   </section>
   
   <div id="chips">
-    <div>Bet Amount: 
-      <input id='bet-amount' type="number"> 
+    <div id="bet-amt">Bet Amount: 
+      <input id='bet-amount' type="text"> 
       <button id="all-in">All In</button> 
-      <button id='deal'class="bet">Deal</button>
+      <button id='deal'class="bet" disabled="true">Deal</button>
     </div>
     <!-- <button id="one-dollar" class="chips">$1</button>
     <button id="five-dollars" class="chips">$5</button>
