--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/cardstarter.css">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Quintessential&display=swap" rel="stylesheet">
-  <title>Document</title>
+  <title>BlackJack</title>
+  <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
   <h1>BlackJack!</h1>
